--- a/hello-cljs/dev-resources/public/index.html
+++ b/hello-cljs/dev-resources/public/index.html
@@ -6,6 +6,7 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 </head>
 
 <body>
